[package]
name = "rxstream"
version = "0.1.0"
authors = ["Yonghong Shi <yongshi@fb.com>"]
edition = "2018"
license = "MIT"

[dependencies]
futures = "0.3.5"
tokio = {version = "0.2.21", features=["time", "stream", "macros", "rt-core", "rt-threaded"]}
either = "1.5.2"
pin-project = "0.4"

[dev-dependencies]
pretty_assertions = "0.4.0"